packages/typ/tests/fixtures/diagnostics/0509_modules_record_manifest_mismatch_08.ml
module U : sig
  type t = { score : bool }
  val x : t
end = struct
  type t = { score : int }
  let x = { score = 7 }
end
